# liquid-ai-way-amd-huggingface-wandb-tokyo-hackathon-2026_fox-co

./: .env.example  .gitignore  AGENTS.md  DEMO_DAY.md  Makefile  README.md  TROUBLESHOOTING.md  pyproject.toml
examples/audio/: README.md  audio_finetune_walkthrough.ipynb
examples/demo/: README.md  text_chat.py
examples/on_device/: README.md
examples/text/: README.md  text_finetune_walkthrough.ipynb
experiments/: HOW_TO_USE_MODEL.md  README.md
experiments/01_data_processing/: README.md  augment_datasets.py  category_breakdown.yaml  format_sft.py  prepare_datasets.py  stats_datasets.py  synthesize_data.py  upload_to_hub.py
experiments/02_training_and_eval/: README.md  chat_template.jinja  eval.py  launch_hf_job.sh  system_prompt_file.txt  train.py
experiments/03_model_format_converting/: README.md  convert_to_gguf.py  launch_hf_job.sh
scripts/: run_eval.py  run_eval_audio.py  verify_run.py
scripts/audio/: _smoke.py  launch_hf_job.sh  train.py
scripts/shared/: _check_dataset.py  _load_env.sh  _validate_env.py
scripts/text/: _smoke.py  launch_hf_job.sh  train.py
src/utils/: hf_llm_inference.py
